--- a/style.css
+++ b/style.css
@@ -28,11 +28,12 @@ body {
     /* border: 1px solid red; */
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     gap: 30px;
 }
 
-.task1 {
+div {
     /* display: flex;
     flex-direction: column;
     gap: 20px; */
@@ -42,20 +43,12 @@ body {
     padding: 10px 20px;
 }
 
-.outTask1, .outTask2 > span{
-    border-radius: 4px;
+.outTask1, .outTask2 {
+    border-radius: 8px;
     padding: 8px 16px;
+    line-height: 25px;
 }
 
-.task2 {
-    /* display: flex;
-    flex-direction: column;
-    gap: 20px; */
-    border: 2px solid gold;
-    width: 350px;
-    text-align: center;
-    padding: 10px 20px;
-}
 
 input {
     border-radius: 8px;
